infra/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express-container
          image: mongo-express:1.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
---
# External service, access able from outside
# Because of type and nodePort this service become external service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
spec:
  selector:
    app: mongodb-express
  type: LoadBalancer # default value was ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
