infra/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
spec:
  rules:
    - host: localhost-app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongodb-express-service
                port:
                  number: 80
